# rust_bazel_sandbox

./: .gitignore  BUILD  README.md  WORKSPACE
cargo/: BUILD  Cargo.toml  crates.bzl
cargo/.cargo/: config
cargo/remote/: arrayvec-0.4.7.BUILD  base64-0.6.0.BUILD  base64-0.9.1.BUILD  bitflags-1.0.3.BUILD  byteorder-1.2.3.BUILD  cfg-if-0.1.3.BUILD  crossbeam-deque-0.2.0.BUILD  crossbeam-epoch-0.3.1.BUILD  crossbeam-utils-0.2.2.BUILD  fuchsia-zircon-0.3.3.BUILD  fuchsia-zircon-sys-0.3.3.BUILD  gcc-0.3.54.BUILD  httparse-1.2.4.BUILD  hyper-0.10.13.BUILD  hyper-rustls-0.6.1.BUILD  idna-0.1.4.BUILD  language-tags-0.2.2.BUILD  lazy_static-0.2.11.BUILD  libc-0.2.40.BUILD  log-0.3.9.BUILD  log-0.4.1.BUILD  matches-0.1.6.BUILD  memoffset-0.2.1.BUILD  mime-0.2.6.BUILD  nodrop-0.1.12.BUILD  num_cpus-1.8.0.BUILD  percent-encoding-1.0.1.BUILD  rand-0.4.2.BUILD  rayon-0.7.1.BUILD  rayon-core-1.4.0.BUILD  redox_syscall-0.1.38.BUILD  ring-0.11.0.BUILD  ring-0.11.0.BUILD.org  rustls-0.9.0.BUILD  safemem-0.2.0.BUILD  scopeguard-0.3.3.BUILD  time-0.1.40.BUILD  traitobject-0.1.0.BUILD  typeable-0.1.2.BUILD  unicase-1.4.2.BUILD  (+10 more)
src/: main.rs
