[package]
name = "rust_bazel_sandbox"
version = "0.1.0"
authors = ["x1- <viva008@gmail.com>"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
base64 = "*"
hyper = "^0.11"
hyper-rustls = "^0.12"

[raze]
workspace_path = "//cargo"
target = "x86_64-apple-darwin"
#gen_workspace_prefix = "rust_bazel"
#genmode = "Remote"
