[package]
name = "rust_bazel_sandbox"
version = "0.1.0"
authors = ["x1- <viva008@gmail.com>"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
base64 = "*"
hyper = "^0.10"
hyper-rustls = "^0.6"
ring = "^0.11.0"

[raze]
workspace_path = "//cargo"
target = "x86_64-apple-darwin"
genmode = "Remote"

[raze.crates.ring.'0.11.0']
data_attr = "[\"src/ec/curve25519/ed25519_pkcs8_v2_template.der\", \"src/ec/suite_b/ecPublicKey_p256_pkcs8_v1_template.der\", \"src/ec/suite_b/ecPublicKey_p384_pkcs8_v1_template.der\", \"src/data/alg-rsa-encryption.der\"]"
additional_flags = [
  "--cfg 'feature=\\\"default\\\"'",
  "--cfg 'feature=\\\"dev_urandom_fallback\\\"'",
  "--cfg 'feature=\\\"use_heap\\\"'",
  "-l static=ring-core",
  "-L native=/tmp/ring_out_dir_outputs",
]
gen_buildrs = true

[raze.crates.webpki.'0.14.0']
data_attr = "[\"src/data/alg-ecdsa-p256.der\",\"src/data/alg-ecdsa-p384.der\",\"src/data/alg-ecdsa-sha256.der\",\"src/data/alg-ecdsa-sha384.der\",\"src/data/alg-rsa-encryption.der\",\"src/data/alg-rsa-pkcs1-sha1.der\",\"src/data/alg-rsa-pkcs1-sha256.der\",\"src/data/alg-rsa-pkcs1-sha384.der\",\"src/data/alg-rsa-pkcs1-sha512.der\",\"src/data/alg-rsa-pss-sha256.der\",\"src/data/alg-rsa-pss-sha384.der\",\"src/data/alg-rsa-pss-sha512.der\"]"
